GNOME Bugzilla – Bug 752484
rss: error on adding the same feeds from separate resources
Last modified: 2016-03-28 23:30:49 UTC
try to add http://planet.gnome.org/rss20.xml and http://planet.gnome.org/atom.xml (tracker-miner-rss:32571): Tracker-CRITICAL **: Could not insert feed information for message titled:'Network management workflow (or, GSoC report #4)', GDBus.Error:org.freedesktop.Tracker1.SparqlError.Internal: UNIQUE constraint failed: nie:DataObject.nie:url (strerror of errno (not necessarily related): No such file or directory)
The following fix has been pushed: 832baf7 rss: Account for a same feed message coming from different channels
Created attachment 307593 [details] [review] rss: Account for a same feed message coming from different channels Unfortunately the nmo:communicationChannel docs are very explicit about the property cardinality. So we just create the mfo:FeedMessage for the first channel, and make it bail out any next time it would be added, from the same mfo:FeedChannel or another.
(In reply to Carlos Garnacho from comment #2) > Created attachment 307593 [details] [review] [review] > rss: Account for a same feed message coming from different channels > > Unfortunately the nmo:communicationChannel docs are very explicit about > the property cardinality. So we just create the mfo:FeedMessage for > the first channel, and make it bail out any next time it would be > added, from the same mfo:FeedChannel or another. What will happens if we will kill channel? Will it stay while some other channel uses it?
I mean what will happens with mfo:FeedMessage which connected to 2 channels. Will it killed if one channel killed. Yes, it will. So it's a bug ;)
(Shortly) after this bug was reported the nmo:communicationChannel cardinality changed, fixing this remaining issue. See commit 04d5d945.