rss: Account for a same feed message coming from different channels

Unfortunately the nmo:communicationChannel docs are very explicit about
the property cardinality. So we just create the mfo:FeedMessage for
the first channel, and make it bail out any next time it would be
added, from the same mfo:FeedChannel or another.

https://bugzilla.gnome.org/show_bug.cgi?id=752484